--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,9 @@
     "require": {
         "php": "^7.1.3",
         "ext-iconv": "*",
+        "knplabs/knp-markdown-bundle": "^1.7",
         "sensio/framework-extra-bundle": "^5.1",
+        "sensiolabs/security-checker": "^4.1",
         "symfony/apache-pack": "^1.0",
         "symfony/asset": "^4.0",
         "symfony/console": "^4.0",
@@ -59,7 +61,8 @@
     "scripts": {
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
-            "assets:install --symlink --relative %PUBLIC_DIR%": "symfony-cmd"
+            "assets:install --symlink --relative %PUBLIC_DIR%": "symfony-cmd",
+            "security-checker security:check": "script"
         },
         "post-install-cmd": [
             "@auto-scripts"
