--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -25,3 +25,5 @@ doctrine:
                 dir: '%kernel.project_dir%/src/Entity'
                 prefix: 'App\Entity'
                 alias: App
+        filters:
+            fortune_cookie_discontinued: App\Doctrine\DiscontinuedFilter
